@@ -71,7 +71,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <!-- endbower -->
-    <script src="bower_components/openlayers/ol.js"></script>
+    <script src="bower_components/openlayers/ol-debug.js"></script>
     <!-- endbuild -->
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
