@@ -61,8 +61,8 @@ body {
 
 /* Responsive: Portrait tablets and up */
 @media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
+/*  .container {
+    max-width: 730px; */
   }
 
   /* Remove the padding we set earlier */
