@@ -6,5 +6,5 @@ use Test::More;
 use Catalyst::Test 'UBR::Geo';
 use UBR::Geo::Controller::Map;
 
-ok( request('/map')->is_success, 'Request should succeed' );
+ok( request('/map/list')->is_success, 'Request should succeed' );
 done_testing();
