@@ -2,6 +2,8 @@ This file documents the revision history for Perl web application UBR-Geo.
 
 {{$NEXT}}
 
+    - first functional version
+
 0.002     2015-02-14 19:06:12+01:00 Europe/Berlin
 
     - initial revision
